--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form action="index_submit" method="" accept-charset="utf-8" class="formBox" onsubmit="return submitregister()">
             <input id="phoneNum" type="" name="" value="手机号">
             <div class="codeBox">
-                <input id="verificationCode" type="" name="" value="验证码">
+                <input id="verificationCode" type="" name="" value="6位验证码">
                 <input id="getCode" onclick="getcode()" type="button" name="" value="发送验证码">
             </div>
             <input id="submitR" type="submit" name="" value="快速注册">
